docs: update docs
