# internal/models/calculation.go
@@ -15,23 +15,12 @@ type Calculation struct {
 	ID       int     `json:"id" example:"1"`
 }
 
-// Request model for creating a calculation
 type CreateCalculationRequest struct {
 	Num1     float32 `json:"number1" validate:"required" example:"1"`
 	Num2     float32 `json:"number2" validate:"required" example:"1"`
 	Operator string  `json:"operator" validate:"required,operator" example:"+"`
 }
 
-// Response model for returning calculation results
-type CalculationResponse struct {
-	ID       int     `json:"id" example:"1"`
-	Num1     float32 `json:"number1" example:"1"`
-	Num2     float32 `json:"number2" example:"1"`
-	Operator string  `json:"operator" example:"+"`
-	Result   float32 `json:"result" example:"2"`
-}
-
-// Request model for updating a calculation (optional, if your API supports updates)
 type UpdateCalculationRequest struct {
 	Num1     *float32 `json:"number1,omitempty" example:"1"`
 	Num2     *float32 `json:"number2,omitempty" example:"1"`
